# stembot-esp32

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  notes.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.qemu
components/executor/: CMakeLists.txt
components/executor/agent/: CMakeLists.txt  aes_eax.cpp  agent.cpp
components/executor/agent/include/: agent.h  agent.hpp
components/executor/include/: executor.h  executor.hpp
components/helloworld/: CMakeLists.txt  helloworld.cpp
components/helloworld/include/: helloworld.h  helloworld.hpp
components/kvstore/: CMakeLists.txt  kvstore.cpp
components/kvstore/include/: kvstore.hpp
components/models/: CMakeLists.txt  config.cpp  control.cpp  idf_component.yml  network.cpp  utils.cpp
components/models/include/: config.h  config.hpp  control.h  control.hpp  network.hpp  utils.hpp
components/service/: CMakeLists.txt  ethernet.cpp  time.cpp
components/service/include/: ethernet.hpp  time.hpp
main/: CMakeLists.txt  configure.cpp  main.cpp  network.cpp  processor.cpp
scripts/: _common.sh  build.sh  emulate.sh  flash.sh  lint.sh  monitor.sh  setup.sh  stop.sh  test.sh
tests/: CMakeLists.txt  CMakePresets.json  conanfile.py  test_agent.cpp  test_control.cpp  test_helloworld.cpp  test_network.cpp
